# MCP-Host

./: .gitignore  Problem_Tracker_NextIteration.md  README.md  README.md.orig  README.md.rej  design-vision.md  git.apply  improvements.md  progress.md  refinement.md
backend/: Cargo.toml  README.md
backend/migrations/: 0001_create_tables.sql  0002_add_server_logs.sql  0003_add_service_integrations.sql  0004_add_webhook_secret.sql  0005_add_custom_domains.sql  0006_add_server_secrets.sql  0007_add_server_files.sql  0008_add_gpu_flag.sql  0009_add_manifest.sql  0010_add_server_capabilities.sql  0011_add_indexes.sql  0012_add_job_queue.sql  0013_add_roles_quota.sql  0014_add_vector_dbs.sql  0015_add_ingestion_jobs.sql  0016_add_workflows.sql  0017_add_invocation_traces.sql  0018_add_evaluation_tables.sql  0019_add_organizations.sql  0020_create_build_artifacts.sql  0021_create_runtime_policy_decisions.sql  0022_enhance_runtime_policy_decisions.sql  0023_create_evaluation_certifications.sql  0024_create_governance_workflows.sql  0025_create_promotion_tracks.sql  0026_create_capability_intelligence_scores.sql  0027_update_evaluation_certifications.sql  0028_create_vm_runtime_tables.sql  0029_extend_vm_runtime_tables.sql  0030_create_runtime_vm_attestations.sql  0031_enhance_trust_registry.sql  0032_trust_registry_lifecycle.sql  0033_remediation_orchestrator.sql  0034_remediation_control_plane.sql  0035_remediation_accelerator_posture.sql  0036_remediation_workspace_lifecycle.sql  0037_promoted_run_linkage.sql  0038_promotion_posture_metadata.sql  0039_lifecycle_analytics.sql  (+8 more)
(+212 files in other folders)
