[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
jsonwebtoken = "8.2"
argon2 = "0.4"
uuid = { version = "1.3", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
axum-prometheus = "0.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
rand_core = "0.6"
bollard = "0.19"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
dashmap = "5"
once_cell = "1.18"
tempfile = "3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
git2 = "0.18"
tar = "0.4"
bytes = "1"
nix = { version = "0.30", features = ["signal"] }
acme2 = "0.5"
thiserror = "1.0"
anyhow = "1.0"
kube = { version = "0.88", features = ["runtime"] }
k8s-openapi = { version = "0.21", default-features = false, features = ["v1_26"] }
strsim = "0.10"
base64 = "0.21"

[dev-dependencies]
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
